# NotAnotherFantasyChessGame

./: .gitignore  CMakeLists.txt  README.md
docs/: GDD.md
src/: main.cpp
